vlib/v/checker/tests/infix_compare_option_err.out
vlib/v/checker/tests/infix_compare_option_err.vv:6:5: error: `?int` cannot be used as `int`, unwrap the option first
    4 |
    5 | fn main() {
    6 |     if foo() > foo() {
      |        ~~~~~
    7 |     }
    8 | }
